--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.12.2
+  provider: any
+  flutter_gherkin: any
 
 
   # The following adds the Cupertino Icons font to your application.
